removed bootstrap elements for simplicity (for now). Fixed canvas offset for clicking, with stackoverflow question.

--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,8 @@
     padding: 0px;
     position: absolute;
 }
+
+#console {
+	height: 200px;
+	width: 200px;
+}
